--- a/.gitignore
+++ b/.gitignore
@@ -149,4 +149,6 @@ cython_debug/
 # Local History for Visual Studio Code
 .history/
 
+# water detect
 OutImage/
+TrainedModelWeiht1m_steps_Semantic_TrainedWithLabPicsAndCOCO_AllSets.torch
